
What's new in version 0.7.1

* BUGFIX: avoid crashing when using many meters
  (thanks to David Cho for the report)

What's new in version 0.7

* CPU affinity configuration ('a' key)
* Improve display of tree view, properly nesting
  threads of the same app based on TGID.
* IO-wait time now counts as idle time, which is a more
  accurate description. It is still available in
  split time, now called detailed CPU time.
  (thanks to Samuel Thibault for the report)
* BUGFIX: Correct display of TPGID field
* Add TGID field
* BUGFIX: Don't crash with invalid command-line flags
  (thanks to Nico Golde for the report)
* Fix GCC 4.3 compilation issues
  (thanks to Martin Michlmayr for the report)
* OpenVZ support, enabled at compile-time with
  the --enable-openvz flag.
  (thanks to Sergey Lychko)

What's new in version 0.6.6

* Add support of NLWP field
  (thanks to Bert Wesarg)
* BUGFIX: Fix use of configurable /proc location
  (thanks to Florent Thoumie)
* Fix memory percentage calculation and make it saner
  (thanks to Olev Kartau for the report)
* Added display of DRS, DT, LRS and TRS
  (thanks to Matthias Lederhofer)
* BUGFIX: LRS and DRS memory values were flipped
  (thanks to Matthias Lederhofer)
* BUGFIX: Don't crash on very high UIDs
  (thanks to Egmont Koblinger)

What's new in version 0.6.5

* Add hardened-debug flags for debugging with Hardened GCC
* BUGFIX: Handle error condition when a directory vanishes
  from /proc
* BUGFIX: Fix leak of process command line
* BUGFIX: Collect orphaned items when arranging the tree view.
  (thanks to Wolfram Schlich for assistance with debugging)
* Separate proc and memory debugging into separate #defines.
* BUGFIX: Fix message when configure fails due to
  missing libraries
  (thanks to Jon)
* BUGFIX: Don't truncate value when displaying a very large
  process
  (thanks to Bo Liu)

What's new in version 0.6.4

* Add an option to split the display of kernel time
  in the CPU meter into system, IO-wait, IRQ and soft-IRQ.